# rai-audio-analyzer-v2

./: .gitignore  CHANGELOG.md  M0_HANDOFF.md  M1_HANDOFF.md  M2_HANDOFF.md  M3_HANDOFF.md  M4_HANDOFF.md  M5_HANDOFF.md  README.md  pyproject.toml  requirements-v3.lock.txt  requirements.lock.txt  requirements.txt
.github/workflows/: ci.yml
docs/: ENVIRONMENT.md  PHASE3_PLAN.md
docs/baselines/: gate-reference-v3baseline.txt
docs/flag_rate/: 2026-07-12-profile-ab-repro.md  2026-07-12-trigger2-extension-ab.json  2026-07-12-trigger2-extension-ab.md
rai_analyzer/: __init__.py  analyzer.py  beatgrid.py  candidates.py  cli.py  config.py  contracts.py  gui.py  io_audio.py  loudness.py  onsets.py  profiles.py  resolver.py  synthetic.py  tempogram.py
rai_analyzer/evidence/: __init__.py  fingerprint.py  hihat_density.py  prior.py  tempogram_strength.py
rai_analyzer/fingerprints/: drill.committed.json  drill.json
rai_analyzer/metrics/: __init__.py  bands.py  compute.py  contracts.py  dynamics.py  (+3 more)
rai_ui/: __init__.py  __main__.py  _buildinfo.py  app.py  main_window.py  smoke.py
tests/: conftest.py  test_analyzer.py  test_beatgrid.py  test_candidates.py  test_cli_profile.py  test_contracts.py  test_engine_boundary.py  test_fingerprint.py  test_flag_rate_ab.py  test_gate_boundary_m3.py  test_hihat_density.py  test_io.py  test_loudness.py  test_metrics_bands.py  test_metrics_contracts.py  test_metrics_dynamics.py  test_metrics_spectrum.py  test_metrics_stereo.py  test_onsets.py  test_prior.py  test_relearn_service.py  test_resolver.py  test_resolver_ambiguity.py  test_tempogram.py
tools/: flag_rate_ab.py  gen_theme.py  preview_shots.py
validation/: __init__.py  __main__.py  ground_truth.py  harness.py
(+101 files in other folders)
