[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rai-audio-analyzer"
version = "2.0.0"
description = "Octave-resistant tempo + loudness analysis for drill/trap production"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "librosa>=0.10",
    "soundfile>=0.12",
    "pyloudnorm>=0.1.1",
]

[project.optional-dependencies]
gui = ["tkinterdnd2>=0.3", "matplotlib>=3.7"]
dev = ["pytest>=7.0"]

[project.scripts]
rai-analyze = "rai_analyzer.cli:main"

[tool.setuptools]
packages = ["rai_analyzer", "rai_analyzer.evidence"]

[tool.setuptools.package-data]
rai_analyzer = ["fingerprints/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::UserWarning", "ignore::FutureWarning"]
